[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus"
version = "0.1.0"
description = "Python bindings for the Nautilus tracing JIT compiler"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nautilus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
